kubernetes/transmission/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  transmission
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      containers:
      - image: jaymoulin/transmission
        name: transmission
        resources:
          limits:
            cpu: "100m"
            memory: "256M"
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  9091
          name:  http
        volumeMounts:
        - mountPath: /output
          name: output
        - mountPath: /to_download
          name: input
        - mountPath: /config/settings.json
          name: config
          subPath: settings.json
      volumes:
        - name: output
          nfs:
            path: /tank/media/downloads
            server: "192.168.1.42"
        - name: input
          nfs:
            path: /tank/media/torrents
            server: "192.168.1.42"
        - name: config
          configMap:
            name: transmission-settings
            items:
              - key: settings.json
                path: settings.json
