kubernetes/transmission/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    external-dns.alpha.kubernetes.io/hostname: torrent.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - torrent.slfhst.io
    secretName: transmission-cert-prod
  rules:
  - host: torrent.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: http
